--- a/index.html
+++ b/index.html
@@ -5,44 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./font-awesome/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
- 
     <title>Personal Portfolio</title>
 </head>
 <body>
-    <header>
-        <div class='wrapper'>
-            <a class='logo' href="">hh.</a>
-            <nav>
-                <ul class='nav-ul'>
-                    <li class='home'> 
-                        <a href="#home">home</a>
-                    </li>
-                    <li class='about'>
-                        <a href="#about">about</a>
-                    </li>
-                    <li class='projects'>
-                        <a href="#projects">projects</a>
-                    </li>
-                    <li class='contact'>
-                        <a href="#contact">get in touch</a>
-                    </li>
-                </ul>
-            </nav>
-            <div>
-                <h1>hara hordofa</h1>
-                <p>toronto based front-end developer</p>
-                <img src="" alt="">
+    <header class='wrapper'>
+        <div class='nav-div wrapper'>
+            <nav class='nav-bar'>
+            <a href="#" class='nav-logo'>hh.</a>
+            <ul class='nav-list'>
+                <li class='nav-item'><a href="#home" class='nav-link'>home</a></li>
+                <li class='nav-item'><a href="#about" class='nav-link'>about</a></li>
+                <li class='nav-item'><a href="#projects" class='nav-link'>projects</a></li>
+                <li class='nav-item'><a href="#contact" class='nav-link'>contact</a></li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
-        </div><!-- end of wrapper -->
+            </nav>
+        </div><!-- end of nav-div -->
+        <div class='wrapper header-content'>
+            <h1>hara hordofa</h1>
+            <p>toronto based front-end developer</p>
+        </div><!-- end of header-content -->
     </header>
     <main>
         <section class='about-me'>
             <div class='wrapper'>
-                <h2>about me</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi nihil cumque, nemo eveniet at assumenda, delectus veniam aspernatur, ducimus repudiandae maiores ratione.</p>
+                <div class="about-content">
+                    <h2>about me</h2>
+                    <img src="./asset/34788.jpg" alt="">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio obcaecati soluta doloribus facere accusantium laborum voluptate harum itaque. Maiores nulla impedit aperiam facere dolor neque similique laudantium voluptates beatae culpa.</p>
+                </div>
             </div>
         </section>
         <section class='skills-section'>
@@ -158,6 +157,13 @@
             </div>
         </section>
     </main>
-    <footer>Created by Hara © 2023</footer>
+    
+    <footer>
+        <div>
+        <p>Created by Hara © 2023</p>
+        </div>
+    </footer>
+
+    <script src='./script/script.js'></script>
 </body>
 </html>
