styled about section and added icons for skills section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./font-awesome/css/all.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.4.0-web/css/all.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">      
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
@@ -48,15 +49,72 @@
             <div class='wrapper'>
                 <h2>skills</h2>
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Sass</li>
-                    <li>Paired programming</li>
-                    <li>REST APIs</li>
-                    <li>Accessibility</li>
-                    <li>Git and GitHub</li>
-                    <li>JavaScript</li>
-                    <li>React</li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-html5"></i>
+                            <p>HTML</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-css3-alt"></i>
+                            <p>CSS</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-sass"></i>
+                            <p>Sass</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-github"></i>
+                            <p>Git and <br>GitHub</br></p> 
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-brands fa-square-js"></i> 
+                            <p>JavaScript</p> 
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-sharp fa-solid fa-universal-access"></i>
+                            <p>Accessibility</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-user-group"></i>
+                            <p>Paired <br>Programming</br></p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-gears"></i>
+                            <p>REST APIs</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="devicon-firebase-plain"></i>
+                            <p>Firebase</p>
+                        </div>
+                    </li>
+                    <li> 
+                        <div>
+                            <i class="fa-brands fa-react"></i>
+                            <p>React</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <p>Responsive <br>Design</br></p>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </section>
