adjusted the colors on the website for accessibility

--- a/index.html
+++ b/index.html
@@ -15,114 +15,93 @@
 </head>
 <body>
     <header class='hero-img'>
-        <div class='nav-div wrapper'>
-            <nav class='nav-bar'>
-            <a href="#" class='nav-logo'>hh.</a>
-            <ul class='nav-list'>
-                <li class='nav-item'><a href="#home" class='nav-link'>home</a></li>
-                <li class='nav-item'><a href="#about" class='nav-link'>about</a></li>
-                <li class='nav-item'><a href="#projects" class='nav-link'>projects</a></li>
-                <li class='nav-item'><a href="#contact" class='nav-link'>contact</a></li>
-            </ul>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+        <div class="navbar">
+            <div class="container flex-nav">
+                <div class="nav-header">
+                    <a>hh</a>
+                    <button class="nav-toggle" id='navToggle'>
+                        <i class='fas fa-bars'></i>
+                    </button>   
+                </div> 
+                <nav class='nav-links' id='nav-links'>
+                    <ul>
+                        <li class="nav-link"><a href="#home">Home</a></li>
+                        <li class="nav-link"><a href="#about">About</a></li>
+                        <li class="nav-link"><a href="#projects">Projects</a></li>
+                        <li class="nav-link"><a href="#contact"><span>Contact</span></a></li>
+                    </ul>
+                </nav>
             </div>
-            </nav>
-        </div><!-- end of nav-div -->
+        </div>
         <div class='wrapper header-content'>
             <h1>hara hordofa</h1>
             <p>toronto based front-end developer</p>
         </div><!-- end of header-content -->
     </header>
     <main>
-        <section class='about-me'>
+        <section id='about' class='about'>
             <div class='wrapper'>
                 <div class="about-content">
                     <h2>about me</h2>
-
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio obcaecati soluta doloribus facere accusantium laborum voluptate harum itaque. Maiores nulla impedit aperiam facere dolor neque similique laudantium voluptates beatae culpa.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing 
+                       elit. Optio obcaecati soluta doloribus facere accusantium 
+                       laborum voluptate harum itaque. Maiores nulla impedit aperiam 
+                       facere dolor neque similique laudantium voluptates beatae 
+                       culpa.</p>
                 </div>
             </div>
         </section>
         <section class='skills-section'>
-            <div class='wrapper skills-content '>
+            <div class='skills-content wrapper'>
                 <h2>technical skills</h2>
                 <ul>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="fa-brands fa-html5"></i>
-                        </div>
+                        <i class="fa-brands fa-html5"></i>
                         <p>HTML</p>
                     </li>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="fa-brands fa-css3-alt"></i>
-                        </div>
+                        <i class="fa-brands fa-css3-alt"></i>
                         <p>CSS</p>
                     </li>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="fa-brands fa-sass"></i>
-                        </div>
+                        <i class="fa-brands fa-sass"></i>
                         <p>Sass</p>
                     </li>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="fa-brands fa-github"></i>
-                        </div>
+                        <i class="fa-brands fa-github"></i>
                         <p>Git and <br>GitHub</br></p> 
                     </li>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="fa-brands fa-square-js"></i> 
-                        </div>
+                        <i class="fa-brands fa-square-js"></i> 
                         <p>JavaScript</p> 
                     </li>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="fa-sharp fa-solid fa-universal-access"></i>
-                        </div>
+                        <i class="fa-sharp fa-solid fa-universal-access"></i>
                         <p>Accessibility</p>
                     </li>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="fa-solid fa-user-group"></i>
-                        </div>
+                        <i class="fa-solid fa-user-group"></i>
                         <p>Paired <br>Programming</br></p>
                     </li>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="fa-solid fa-gears"></i>
-                        </div>
+                        <i class="fa-solid fa-gears"></i>
                         <p>REST APIs</p>
                     </li>
                     <li>
-                        <div class='skills-icons'>
-                            <i class="devicon-firebase-plain"></i>
-                        </div>
+                        <i class="devicon-firebase-plain"></i>
                         <p>Firebase</p>
                     </li>
                     <li> 
-                        <div class='skills-icons'>
-                            <i class="fa-brands fa-react"></i>
-                        </div>
+                        <i class="fa-brands fa-react"></i>
                         <p>React</p>
-                    </li>
-                    <li>
-                        <div class='skills-icons'>
-                            <i class="fa-solid fa-mobile-screen-button"></i>
-                        </div>
-                        <p>Responsive <br>Design</br></p>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class='projects'>
-            <div class='wrapper'>   
-                    <h2>projects</h2>
-                    <div class="project-list">
+        <section id='projects' class='projects'>
+            <div class='wrapper'>
+                <h2>projects</h2>
+                <div class="project-list">
                         <ul>
                             <li class='project1'>
                                 <div class='project-img'>
@@ -207,7 +186,7 @@
     </main>
     <footer>
         <div>
-        <p>Created by Hara © 2023</p>
+            <p>Created by Hara © 2023</p>
         </div>
     </footer>
 
