updated css for contact section

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
         <section id='contact' class='contact'>
             <div class='wrapper'>
                 <h2>get in touch</h2>
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores,  
-                    tenetur impedit ipsum aut est hic, totam corrupti nemo modi vero,   
-                    eligendi maxime nihil distinctio? Veniam sint vitae dolores laboriosam  
-                    dicta.</p>
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Maiores, tenetur impedit ipsum aut est hic, totam corrupti nemo 
+                    modi vero, eligendi maxime nihil distinctio? Veniam sint vitae 
+                    dolores laboriosam dicta.</p>
                 <div class='contact-links'>
                     <a href="">
                         <i class="fa-brands fa-linkedin  fa-lg"></i>
