updated css styling for mobile view and started styling media queries for larger screens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="navbar">
             <div class="container flex-nav">
                 <div class="nav-header">
-                    <a>hh</a>
+                    <a>hh.</a>
                     <button class="nav-toggle" id='navToggle'>
                         <i class='fas fa-bars'></i>
                     </button>   
@@ -40,15 +40,12 @@
     </header>
     <main>
         <section id='about' class='about'>
-            <div class='wrapper'>
-                <div class="about-content">
-                    <h2>about me</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing 
-                       elit. Optio obcaecati soluta doloribus facere accusantium 
-                       laborum voluptate harum itaque. Maiores nulla impedit aperiam 
-                       facere dolor neque similique laudantium voluptates beatae 
-                       culpa.</p>
-                </div>
+            <div class='wrapper about-content'>
+                <h2>about me</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicingelit. Optio 
+                    obcaecati soluta doloribus facere accusantium laborum voluptate harum
+                    itaque. Maiores nulla impedit aperiam facere dolor neque similique 
+                    laudantium voluptates beatae culpa.</p>
             </div>
         </section>
         <section class='skills-section'>
@@ -99,24 +96,24 @@
             </div>
         </section>
         <section id='projects' class='projects'>
+            <h2>projects</h2>
             <div class='wrapper'>
-                <h2>projects</h2>
                 <div class="project-list">
                         <ul>
                             <li class='project1'>
                                 <div class='project-img'>
-                                    <img src="./asset/bar-one.jpg" alt="">
+                                    <img src="./asset/left-image.jpg" alt="">
                                 </div>
                                 <div class='project-info'>
                                     <h3>Bar-One</h3>
-                                    <p>A multipage restaurant website created using HTML & CSS.</p>
                                     <div class='technical-skills'>
-                                        <p>Skills Used</p>
                                         <ul>
                                             <li><i class="fa-brands fa-html5 fa-xl"></i></li>
                                             <li><i class="fa-brands fa-css3-alt fa-xl"></i></li>
+                                            <li><i class="fa-brands fa-square-js fa-xl"></i></li>
                                         </ul>
                                     </div>
+                                    <p>A multipage restaurant website created using HTML & CSS.</p>
                                     <div class='project-links'>
                                         <a class='live-link' href="">Live Site</a>
                                         <a class ='git-link' href="">GitHub</a>
@@ -125,20 +122,40 @@
                             </li>
                             <li class='project2'>
                                 <div class='project-img'>
-                                    <img src="./asset/thecocktaillibrary.png" alt="">
+                                    <img src="./asset/pexels-karolina-grabowska-4021976.jpg" alt="">
                                 </div>
                                 <div class='project-info'>
                                     <h3>The Cocktail Library</h3>
-                                    <p>A website that helps you find a cocktail recipe utilizing thecocktailDB API. Completed this 
-                                        project at Juno College with my partner Jonathan. </p>
                                     <div class='technical-skills'>
-                                        <p>Skills Used</p>
                                         <ul>
                                             <li><i class="fa-brands fa-html5 fa-xl"></i></li>
                                             <li><i class="fa-brands fa-css3-alt fa-xl"></i></li>
+                                            <li><i class="fa-brands fa-square-js fa-xl"></i></li>
                                             <li><i class="fa-solid fa-gears fa-xl"></i></li>
                                         </ul>
                                     </div>
+                                    <p>A website that helps you find a cocktail recipe using an API.  </p>
+                                    <div class='project-links'>
+                                        <a class='live-link' href="">Live Site</a>
+                                        <a class ='git-link' href="">GitHub</a>
+                                    </div>
+                                </div> <!-- end of project info div -->
+                            </li>
+                            <li class='project3'>
+                                <div class='project-img'>
+                                    <img src="./asset/image-1.jpg" alt="">
+                                </div>
+                                <div class='project-info'>
+                                    <h3>Project 3</h3>
+                                    <div class='technical-skills'>
+                                        <ul>
+                                            <li><i class="fa-brands fa-html5 fa-xl"></i></li>
+                                            <li><i class="fa-brands fa-css3-alt fa-xl"></i></li>
+                                            <li><i class="fa-brands fa-square-js fa-xl"></i></li>
+                                            <li><i class="fa-brands fa-react fa-xl"></i></li>
+                                        </ul>
+                                    </div>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                     <div class='project-links'>
                                         <a class='live-link' href="">Live Site</a>
                                         <a class ='git-link' href="">GitHub</a>
@@ -150,7 +167,7 @@
             </div><!-- end of wrapper -->
         </section>
         <section id='contact' class='contact'>
-            <div class='wrapper'>
+            <div class='wrapper contact-info'>
                 <h2>get in touch</h2>
                 <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Maiores, tenetur impedit ipsum aut est hic, totam corrupti nemo 
