updated styling for nav section, projects sections and media queries

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 </div> 
                 <nav class='nav-links' id='nav-links'>
                     <ul>
-                        <li class="nav-link"><a href="#home">Home</a></li>
-                        <li class="nav-link"><a href="#about">About</a></li>
-                        <li class="nav-link"><a href="#projects">Projects</a></li>
-                        <li class="nav-link"><a href="#contact"><span>Contact</span></a></li>
+                        <li class="nav-link"><a href="#home">home</a></li>
+                        <li class="nav-link"><a href="#about">about</a></li>
+                        <li class="nav-link"><a href="#projects">projects</a></li>
+                        <li class="nav-link"><a href="#contact"><span>contact</span></a></li>
                     </ul>
                 </nav>
             </div>
@@ -91,6 +91,14 @@
                     <li> 
                         <i class="fa-brands fa-react"></i>
                         <p>React</p>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-laptop-file "></i>
+                        <p>Responsive Design</p>
+                    </li>
+                    <li> 
+                        <i class="fa-solid fa-terminal"></i>
+                        <p>Terminal</p>
                     </li>
                 </ul>
             </div>
@@ -155,7 +163,7 @@
                                             <li><i class="fa-brands fa-react fa-xl"></i></li>
                                         </ul>
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                    <p>Coming soon ...</p>
                                     <div class='project-links'>
                                         <a class='live-link' href="">Live Site</a>
                                         <a class ='git-link' href="">GitHub</a>
@@ -170,9 +178,9 @@
             <div class='wrapper contact-info'>
                 <h2>get in touch</h2>
                 <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                    Maiores, tenetur impedit ipsum aut est hic, totam corrupti nemo 
-                    modi vero, eligendi maxime nihil distinctio? Veniam sint vitae 
-                    dolores laboriosam dicta.</p>
+                        Maiores, tenetur impedit ipsum aut est hic, totam corrupti nemo 
+                        modi vero, eligendi maxime nihil distinctio? Veniam sint vitae 
+                        dolores laboriosam dicta.</p>
                 <div class='contact-links'>
                     <a href="">
                         <i class="fa-brands fa-linkedin  fa-lg"></i>
@@ -189,13 +197,13 @@
                 </div>
                 <div class="contact-form">
                     <form id='site-form' action="https://formspree.io/f/xgebdaev" method='POST'>
-                        <label class='sr-only' for="name">Name</label>
+                        <label class='sr-only' for="name">name</label>
                         <input id='input' class='name' type="text" name='name' placeholder='name' required>
-                        <label class='sr-only' for="email">Email Address</label>
+                        <label class='sr-only' for="email">email Address</label>
                         <input id='input' class='email' type="email" name='email' placeholder='email address' required>
-                        <label class='sr-only' for="">Message</label>
+                        <label class='sr-only' for="">message</label>
                         <textarea name="message" id="message" cols="50" rows="10" placeholder='message'></textarea>
-                        <button class='form-btn' id='form-btn' type='submit'>Submit</button>
+                        <button class='form-btn' id='form-btn' type='submit'>submit</button>
                     </form>
                 </div>
             </div><!-- end of contact wrapper -->
